LU-3929 MDT: deny LWP connection for system upgrade

when upgrading Lustre from b2_1_x to newer versions (say, b2_4_x),
the OSTs will be upgraded firstly, then it will send LWP connection
to old MDT, which causes the clients created for it can't be
recovered for LWP connection is not recoverable.

Change-Id: I4924e8ebb082c831fa872ae61dd2614574820cec
Signed-off-by: Hongchao Zhang <hongchao.zhang@intel.com>